# Novomatic_internship_cpp

./: .gitignore  CMakeLists.txt  README.md  setup.bat
task1/: CMakeLists.txt  README.md
task1/include/: AttributeLayout.hpp  Graphics.hpp  Shape.hpp  Triangle.hpp  Window.hpp
task1/shaders/: fragment.glsl  vertex.glsl
task1/src/: Triangle.cpp  Window.cpp  main.cpp
task2/: CMakeLists.txt  README.md
task2/src/: main.cpp
task3/: CMakeLists.txt  README.md
task3/include/: task3.hpp
task3/src/: main.cpp  task3.cpp
task3/tests/: CMakeLists.txt  test_task3.cpp
task3/tests/include/: task3.hpp
